# eo-predictor

./: .env.development  .env.production  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  update-satellite-data.yml
public/: satellite_paths_metadata.json
scripts/: README-satellites.md  README.md  generate_satellite_paths.py  migrate_to_folders.py  pyproject.toml  satellite-list.json  template-constellation.json  validate_satellites.py
scripts/satellites/: geoeye.json  iceye.json  landsat.json  nisar.json  pelican.json  planetscope.json  sentinel-1.json  sentinel-2.json  sentinel-3.json  skysat.json  tanager.json  worldview-1.json  worldview-2.json  worldview-3.json  worldview-legion.json
src/: App.tsx  vite-env.d.ts
src/assets/: sar.pmtiles
src/components/: About.tsx  Controls.tsx  Header.tsx  PassCounter.tsx  SatellitePopup.tsx  SidebarContent.tsx  TimeSlider.tsx  ZoomPrompt.tsx
src/components/icons/: Stac.tsx
src/components/ui/: badge.tsx  multi-select.tsx  radio-group.tsx
src/hooks/: usePassCounter.ts
src/store/: filterStore.ts
src/utils/: mapUtils.ts  stacUtils.ts  timeUtils.ts
