[project]
name = "eo-predictor-scripts"
version = "0.0.0"
description = "Scripts for the eo-predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "shapely>=2.1.1",
    "skyfield>=1.53",
]

[dependency-groups]
dev = ["ruff>=0.12.10"]

[tool.mypy]
files = ["generate_satellite_paths.py"]
